# A-Swarm

./: .gitignore  .pr_check.txt  A Swarm 2.md  A-SWARM Autonomy Guardrails & Safety — Rules of Engagement (One-Pager).docx  A-SWARM Pilot Beachhead & KPIs (Final).docx  AUTONOMY_IMPLEMENTATION.md  CONTEXT.md  LICENSE  Makefile  PILOT_ACTION_PLAN.md  README.md  SYSTEM_TEST_PLAN.md  WORKING_NOTES.md  pyproject.toml  pytest.ini  requirements.txt  to do.txt
.github/: pull_request_template.md
customer-deployment/: Makefile  README.md  package.sh
dashboard/: .env.example  README.md  a_swarm_mission_control_pro_ui_react.jsx  create_ui_components.js  index.html  integration_guide.md  mission_control.html  mission_control_alt  mission_control_alt2  package-lock.json  package.json  setup.sh  vite.config.ts
deploy/: DOCKER_DESKTOP_TROUBLESHOOTING.md  Dockerfile.blue-api  blue-api-configmap.yaml  blue-api-production.yaml  blue-api-server.yaml  cert-manager-aswarm-ca.yaml  cert-manager-aswarm-identity.yaml  cert-manager-dd-override.yaml  cert-manager-rbac-hardening.yaml  deploy-aswarm-identity.sh  deploy-fastpath.ps1  deploy-production.ps1  deploy-spire-fixed.sh  docker-check-simple.ps1  docker-desktop-fix-robust.ps1  docker-desktop-fix-simple.ps1  docker-desktop-fix.ps1  docker-recovery-minimal.ps1  eso-externalsecrets.yaml  eso-secretstore.yaml  fastpath-complete.yaml  fastpath-with-identity.yaml  generate-dev-certs.sh  minimal-identity-setup.yaml  production-v3.yaml  spiffe-csi-driver-fixed.yaml  spire-deployment-fixed.yaml  spire-minimal-secure.yaml  (+2 more)
docs/: ARCHITECTURE.md  (+5 more)
(+310 files in other folders)
